Lesson 54: 1)create repository, service for Event and SubscriptionToEvent.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8889
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url = jdbc:postgresql://localhost:5432/laboratory54Event
 spring.datasource.username=postgres
 spring.datasource.password=8411
 spring.jpa.hibernate.ddl-auto=create-drop
