--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8889
 spring.datasource.url = jdbc:postgresql://localhost:5432/laboratory54Event
 spring.datasource.username=postgres
-spring.datasource.password=8411
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.password=${Password}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.format_sql=true
